<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">demo</string>
    <string name="example_edittext">   Here you can ask anything for poll</string>
    <string name="option1">  option 1</string>
    <string name="option2">  option 2</string>
    <string name="option3">  option 3</string>
    <string name="option4">  option 4</string>

    <string name="enter_text">   Put Question Here </string>
</resources>
