<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >


    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="18dp"
        android:text="@string/example_edittext" />



    <EditText
        android:id="@+id/edittext"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="20dp"
        android:background="@drawable/stylles"
        android:hint="@string/enter_text" android:inputType="textVisiblePassword" />


    <EditText
        android:id="@+id/text1"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_alignLeft="@+id/edittext"
        android:layout_below="@+id/edittext"
        android:layout_marginTop="20dp"
        android:background="@drawable/stylles"

        android:hint="@string/option1"  android:inputType="text"/>


    <EditText
        android:id="@+id/text2"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_alignLeft="@+id/text1"
        android:layout_below="@+id/text1"
        android:layout_marginTop="20dp"
        android:background="@drawable/stylles"
        android:hint="@string/option2"  android:inputType="text"/>


    <EditText
        android:id="@+id/text3"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_alignLeft="@+id/text2"
        android:layout_below="@+id/text2"
        android:layout_marginTop="20dp"
        android:background="@drawable/stylles"
        android:hint="@string/option3" android:inputType="text"/>


    <EditText
        android:id="@+id/text4"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_alignLeft="@+id/text3"
        android:layout_below="@+id/text3"
        android:background="@drawable/stylles"
        android:layout_marginTop="20dp"
        android:hint="@string/option4"  android:inputType="text"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button"
        android:layout_alignRight="@+id/text4"
        android:layout_below="@+id/text4"
        android:layout_marginTop="20dp"
        android:layout_alignParentRight="true"
        android:paddingRight="50dp"

        android:text="button"/>
</RelativeLayout>
